--- a/dashboard-master.html
+++ b/dashboard-master.html
@@ -167,7 +167,7 @@
 <!-- ================= SCRIPTS ================= -->
 <script src="js/config.js"></script>
 <script src="js/utils.js"></script>
-<script src="js/dashboard.js"></script>
+<script src="js/dashboard-master.js"></script>
 
 </body>
 </html>
