--- a/dashboard-master.html
+++ b/dashboard-master.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
-  <title>Dashboard Master | Agenda SISREG</title>
+  <title>Admin | Agenda SISREG</title>
 
   <!-- CSS -->
   <link rel="stylesheet" href="css/theme.css">
@@ -22,8 +22,8 @@
 <!-- ================= HEADER ================= -->
 <header class="dash-header">
   <div class="container unit-info">
-    <h1>📊 Dashboard Geral – Gestor</h1>
-    <p>Visão consolidada de todas as unidades</p>
+    <h1>Veras Eurípedes</h1>
+    <p>Admin</p>
 
     <div class="actions-bar">
       <button id="btnSincronizar" class="btn-main btn-sync">🔄 Sincronizar</button>
