--- a/dashboard-master.html
+++ b/dashboard-master.html
@@ -21,14 +21,22 @@
 
 <!-- ================= HEADER ================= -->
 <header class="dash-header">
-  <div class="container unit-info">
-    <h1>Veras Eurípedes</h1>
-    <p>Admin</p>
+  <!-- Elementos decorativos -->
+  <div class="header-decorative circle-1"></div>
+  <div class="header-decorative circle-2"></div>
+  <div class="header-decorative circle-3"></div>
+    
+  <div class="unit-info">
+    <h1>Veras Eurípedes - Admin</h1>
+    <div class="gradient-line"></div>
+    <p>Dashboard • <strong>SISREG Amazonas</strong></p>
+  </div>
 
-    <div class="actions-bar">
+  <div style="display:flex;justify-content:space-between;align-items:center;position:relative;z-index:2;">
+    <div class="header-btns">
       <button id="btnSincronizar" class="btn-main btn-sync">🔄 Sincronizar</button>
       <button id="btnExportarPDF" class="btn-main">📄 Exportar PDF</button>
-      <button id="btnLogout" class="btn-main btn-logout">🚪 Sair</button>
+      <button id="btnLogout" class="btn-main btn-logout">Sair</button>
     </div>
   </div>
 </header>
