--- a/dashboard-master.html
+++ b/dashboard-master.html
@@ -27,7 +27,7 @@
   <div class="header-decorative circle-3"></div>
     
   <div class="unit-info">
-    <h1>Veras Eurípedes - Admin</h1>
+    <h1>VERAS EURÍPEDES - Admin</h1>
     <div class="gradient-line"></div>
     <p>Dashboard • <strong>SISREG Amazonas</strong></p>
   </div>
